[tool.poetry]
name = "bank-account"
version = "0.1.0"
description = ""
authors = ["linxa <linxa2691@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.19.0"
black = "^25.11.0"
isort = "^7.0.0"

[tool.black]
line-length = 119
exclude = '''
/(
    venv
    | \.git
    | __pycache__
)/
'''

[tool.isort]
line_length = 119
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = ["venv"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
